[tool.poetry]
name = "ovat-schemas-metrics"
version = "0.6.0"
description = "redacted schemas"
authors = ["redacted <redacted@redacted.com>"]
packages = [
    { include = "ovat_schemas", from = "." }
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
